[package]
name = "touchid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

dashmap = { version = "5.5.3" }